refactor: streamline list processing and enhance null handling in customer services